feat: Create management endpoint
- Create 'queryStudies' method in dicom-web module
- Add more tags in dicom-web module
- Create get studies endpoint
