# src/studies/router.js
@@ -2,6 +2,7 @@ import { getStudiesUploadProgress, uploadStudies } from './controllers/upload.js
 import Router from '@koa/router';
 import indexImagingStudy from './controllers/index.js';
 import path from 'path';
+import queryStudies from './controllers/manage.js';
 import searchImagingStudies from './controllers/search.js';
 import send from 'koa-send';
 
@@ -20,6 +21,7 @@ router.get('/thumbnails/:name', async (ctx) => {
 
 // Studies routes.
 router.post('/studies/index', indexImagingStudy);
+router.get('/studies', queryStudies);
 router.get('/studies/search', searchImagingStudies);
 router.post('/studies/upload', uploadStudies);
 router.get('/studies/upload', getStudiesUploadProgress);
